--- a/Resources/i18n/de.json
+++ b/Resources/i18n/de.json
@@ -11,6 +11,7 @@
 			"close":"Schliessen"
 		},
 		"noSelectedSkin":"Keine Skin  ausgewählt.",
+		"search":"In meinen Skins suchen...",
 		"tips":{
 			"wear":"Um ein Skin zu trager, berühr und halt das Symbol !"
 		},
