--- a/Resources/i18n/es.json
+++ b/Resources/i18n/es.json
@@ -11,6 +11,7 @@
 			"close":"Cerrar"
 		},
 		"noSelectedSkin":"No skin seleccionado.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: ¡Para usar este skin, toca y mantenga su icono!"
 		},
