--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -11,6 +11,7 @@
 			"close":"Fermer"
 		},
 		"noSelectedSkin":"Aucun skin sélectionné.",
+		"search":"Cherche dans tes skins...",
 		"tips":{
 			"wear":"Protip : Pour porter un skin, touchez et maintenez son icône !"
 		},
