--- a/Resources/i18n/it.json
+++ b/Resources/i18n/it.json
@@ -11,6 +11,7 @@
 			"close":"Chiudere"
 		},
 		"noSelectedSkin":"Nessuno skin selezionato.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
