--- a/Resources/i18n/ja.json
+++ b/Resources/i18n/ja.json
@@ -11,13 +11,14 @@
 			"close":"キャンセル"
 		},
 		"noSelectedSkin":"スキンが選ばれていません。",
+		"search":"あなたのスキンで検索.",
 		"tips":{
 			"wear":"※スキンを適用するには、アイコンをタップしホールドしてください!"
 		},
 		"skinDelete":{
-			"title":"削除を確認する",
-			"message":"\"%S\"を削除してよろしいですか？",
-			"cancel":"いいえ!!!!!!",
+			"title":"確認",
+			"message":"\"%s\"を削除してよろしいですか？",
+			"cancel":"いいえ!",
 			"okay":"はい!"
 		},
 		"progressBar":{
