--- a/Resources/i18n/pl.json
+++ b/Resources/i18n/pl.json
@@ -11,6 +11,7 @@
 			"close":"Zamknij"
 		},
 		"noSelectedSkin":"Nie wybrano skórki",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
