--- a/Resources/i18n/ro.json
+++ b/Resources/i18n/ro.json
@@ -11,6 +11,7 @@
 			"close":"Închide"
 		},
 		"noSelectedSkin":"Nici un skin selectat.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
