--- a/Resources/i18n/ru.json
+++ b/Resources/i18n/ru.json
@@ -11,6 +11,7 @@
 			"close":"Закрыть"
 		},
 		"noSelectedSkin":"Не выбран скин.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Подсказка: Чтобы использовать скин, нажми и удерживай его иконку!"
 		},
