--- a/Resources/i18n/zh.json
+++ b/Resources/i18n/zh.json
@@ -11,6 +11,7 @@
 			"close":"關閉"
 		},
 		"noSelectedSkin":"沒有選取皮膚",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
