--- a/Resources/i18n/ca.json
+++ b/Resources/i18n/ca.json
@@ -11,6 +11,7 @@
 			"close":"Tanca"
 		},
 		"noSelectedSkin":"Cap skin seleccionada.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
