--- a/Resources/i18n/he.json
+++ b/Resources/i18n/he.json
@@ -1,141 +1,142 @@
 {
 	"main":{
-		"skinList":"Skins List",
-		"addSkin":"Add a Skin",
-		"editSettings":"Edit Settings",
+		"skinList":"רשימת דמויות",
+		"addSkin":"הוסף דמות",
+		"editSettings":"ערוך הגדרות",
 		"skinDetails":{
-			"title":"Skins Details",
-			"description":"Description",
-			"creation":"Date of Creation",
-			"wear":"Wear this skin",
-			"close":"Close"
+			"title":"פרטי דמויות",
+			"description":"תיאור",
+			"creation":"תאריך יצירה",
+			"wear":"לבש את הדמות הזאת",
+			"close":"סגור"
 		},
-		"noSelectedSkin":"No skin selected.",
+		"noSelectedSkin":"אין דמות שנבחרה.",
+		"search":"חפש בדמויות שלך...",
 		"tips":{
-			"wear":"Protip: To wear a skin, tap and hold its icon!"
+			"wear":"טיפ: כדי ללבוש דמות, לחץ לחיצה ארוכה על הסמל שלו!"
 		},
 		"skinDelete":{
-			"title":"Confirm Deletion",
-			"message":"Do you really want to delete \"%s\"?",
-			"cancel":"Nooooooo!",
-			"okay":"Sure!"
+			"title":"אשר מחיקה",
+			"message":"האם אתה באמת רוצה למחוק את ״%s\"?",
+			"cancel":"לאאאאאאאא!",
+			"okay":"בטח!"
 		},
 		"progressBar":{
-			"login":"Logging in...",
-			"upload":"Uploading skin...",
-			"loginFail":"Login failed",
-			"uploadFail":"Upload failed",
-			"challengeFail":"Challenge failed",
-			"success":"Upload complete!"
+			"login":"מתחבר...",
+			"upload":"מעלה דמות...",
+			"loginFail":"התחברות נכשלה",
+			"uploadFail":"העלאה נכשלה",
+			"challengeFail":"אתגר נכשל",
+			"success":"העלאה הושלמה!"
 		},
 		"skinUpload":{
 			"confirm":{
-				"title":"Replace skin?",
-				"message":"Do you really want to replace your skin with \"%s\"?",
-				"cancel":"No",
-				"okay":"Yes"
+				"title":"החלף דמות?",
+				"message":"האם את\/ה באמת רוצה להחליף את הדמות עם \"%s\"?",
+				"cancel":"לא",
+				"okay":"כן"
 			},
 			"error":{
-				"title":"Upload error",
-				"login":"Could not login to minecraft.net. Please check your login and password in the settings.",
-				"server":"Could not reach minecraft.net. The site may be down. Check http:\/\/help.mojang.com and retry later.",
-				"upload":"Could not upload the skin to minecraft.net. Please try again later.",
-				"challenge":"You are required to answer a security question to access your account from this device.\nUnfortunately, we couldn't load it. Please check your connection and try again later."
+				"title":"שגיאה בהעלאה",
+				"login":"אין אפשרות להתחבר לminecraft.net. בבקשה תבדוק את פרטי ההתחברות שלך בהגדרות.",
+				"server":"אין אפשרות להתחבר ל-minecraft.net. האתר אולי נפל. בדוק ב http:\/\/help.mojang.com ונסה מאוחר יותר.",
+				"upload":"אין אפשרות להעלות את הדמות ל- minecraft.netז בבקשה נסה מאוחר יותר.",
+				"challenge":"את\/ה נדרש לענות על שאלת אבטחה כדי לגשת לחשבונך מהמכשיר הזה.\nלמרבה הצער, אנחנו לא יכולים לטעון את זה. בבקשה תבדוק את החיבור שלך ותנסה מאוחר יותר."
 			}
 		}
 	},
 	"settings":{
-		"title":"Settings",
-		"username":"Username",
-		"password":"Password",
-		"header":"Minecraft.net Login Credentials",
+		"title":"הגדרות",
+		"username":"שם משתמש",
+		"password":"סיסמא",
+		"header":"אישורי כניסה מ minecraft.net",
 		"footer":{
-			"migratedAccount":"If your account has been migrated to a Mojang account, you have to use your email address instead of your Minecraft username.",
-			"privacy":"Note: we will NEVER store or use any of your informations for anything else than switching your Minecraft skins. Your account info is stored securely in the iOS keychain."
+			"migratedAccount":"אם המשתמש שלך שולב עם משתמש mojang, עליך להשתמש בכתובת האימייל במקום שם המשתמש של מיינקראפט.",
+			"privacy":"הערה: אנחנו לעולם לא נשמור או נשתמש בפרטים שלך בשביל שום דבר אחר חוץ מלהחליף דמויות של מיינקראפט. פרטי החשבון שלך שמורים בבטחה בתוך הIOS."
 		}
 	},
 	"addProcess":{
 		"skinInfo":{
-			"title":"Skin Information",
-			"shortTitle":"Skin Info",
-			"name":"Skin Name",
-			"nameHint":"My Awesome Skin",
-			"description":"Description",
+			"title":"מידע על הדמות",
+			"shortTitle":"פרטי הדמות",
+			"name":"שם דמות",
+			"nameHint":"הדמות האדירה שלי",
+			"description":"תיאור",
 			"method":{
-				"title":"Add the skin...",
-				"search":"By searching the Web",
-				"pseudo":"From an existing user",
-				"url":"From an URL",
-				"cancel":"Cancel"
+				"title":"הוסף את הדמות...",
+				"search":"לפי חיפוש באינטרנט",
+				"pseudo":"מחשבון קיים",
+				"url":"מכתובת URL",
+				"cancel":"ביטול"
 			}
 		},
 		"urlSelect":{
-			"urlTitle":"Paste or type the skin URL here (must be a PNG file):",
-			"pseudoTitle":"Type the Minecraft username here (case-sensitive):",
-			"invalidUrl":"This URL is invalid (MUST be a PNG file)."
+			"urlTitle":"הדבק או כתוב את כתובת URL של הדמות (חייב להיות קובץ PNG):",
+			"pseudoTitle":"כתוב את שם המשתמש של מיינקראפט כאן (תלוי באותיות רישיות):",
+			"invalidUrl":"הכתובת URL הזאת שגויה (חייב להיות קובץ PNG)."
 		},
 		"search":{
-			"select":"Select this skin",
-			"searchHint":"Search on MC Network...",
+			"select":"בחר את הדמות הזאת",
+			"searchHint":"חפש ברשת מיינקראפט...",
 			"indicator":{
-				"searchResults":"Search Results for: %s",
-				"noResults":"No results for: %s",
-				"random":"Random Skins"
+				"searchResults":"תוצאות חיפוש ל: %s",
+				"noResults":"אין תוצאות ל: %s",
+				"random":"דמויות אקראיות"
 			},
 			"error":{
-				"network":"Couldn't load your search results. Check your connexion, and retry later."
+				"network":"אין אפשרות לטעון את תוצאות החיפוש. תבדוק את החיבור, ונסה מאוחר יותר."
 			}
 		},
 		"process":{
-			"title":"Processing...",
+			"title":"מעבד...",
 			"progress":{
 				"initial":"Reticulating Splines...",
-				"skin":"Downloading Skin...",
-				"preview":"Downloading skin preview...",
-				"database":"Registering skin to database...",
-				"success":"Successfully added the skin! :)",
-				"fail":"Fail :("
+				"skin":"מוריד דמות...",
+				"preview":"מוריד תצוגה מקדימה של דמות...",
+				"database":"רושם דמות למרכז מידע...",
+				"success":"הוסף בהצלחה את הדמות! :)",
+				"fail":"נכשל :("
 			},
 			"error":{
-				"skin":"Error while downloading the skin. Aborting.",
+				"skin":"שגיעה בעת הורדת הדמות. מבטל.",
 				"preview":{
-					"title":"Network Error",
-					"message":"Error while downloading the preview. There will be no preview for this skin. Continue anyway?",
-					"cancel":"Cancel",
-					"ok":"Continue"
+					"title":"שגיאת רשת",
+					"message":"שגיאה בעת הורדת התצוגה המקדימה. לא היה תצודה מקדימה לדמות. להמשיך בכל זאת?",
+					"cancel":"ביטול",
+					"ok":"המשך"
 				}
 			},
 			"challenge":{
-				"title":"Identity Confirmation",
-				"help":"You need to answer this question because you are trying to access your Mojang account from a different location.\n\nIf you forgot the answer, you can try answering another question by closing this window and trying again (it's random).\n\nIf you really can't remember, please visit help.mojang.com for instructions on resetting your questions.",
-				"cancel":"Cancel",
-				"continue":"Continue",
-				"hint":"Answer"
+				"title":"אימות אישור",
+				"help":"אתה צריך לענות על השאלה הזאת בגלל שאתה מנסה לגשת למשתמש mojang ממקום אחר.\nאם שכחת את הסיסמא, אתה יכול לנסות שאלה נוספת על ידי סגירת החלון ונסיון חוזר (זה אקראי).\nאם אתה לא מצליח להתחבר, בבקשה תבקר ב help.mojang.com בשביל הדרכה על איפוס השאלות.",
+				"cancel":"ביטול",
+				"continue":"המשך",
+				"hint":"ענה"
 			}
 		},
-		"next":"Next"
+		"next":"הבא"
 	},
 	"credits":{
-		"title":"Credits",
-		"developer":"Developer:",
-		"platform":"Platform:",
-		"translators":"Translators:",
-		"thanks":"Special thanks to:",
-		"modules":"Modules:"
+		"title":"קרדיטים",
+		"developer":"מפתח:",
+		"platform":"פלטפורמה:",
+		"translators":"מתרגמים:",
+		"thanks":"תודות מיוחדות ל:",
+		"modules":"מודולים:"
 	},
 	"buttons":{
-		"edit":"Edit",
-		"done":"Done",
-		"close":"Close"
+		"edit":"עריכה",
+		"done":"סיים",
+		"close":"סגור"
 	},
 	"editSkin":{
-		"short":"Edit",
-		"title":"Edit Skin Info"
+		"short":"עריכה",
+		"title":"ערוך פרטי דמות"
 	},
 	"restoreDatabase":{
-		"title":"Uh oh...",
-		"message":"We were unable to open the file containing your skins, for some reason.\nFortunately, there's a backup from %s.\nWould you like to restore it?",
-		"no":"No, thanks.",
-		"yes":"Let's do this!"
+		"title":"או או...",
+		"message":"אין לנו אפשרות לפתוח את הקובץ שמכיל את הדמויות שלך, מסיבה כלשהי.\nלמרבה המזל, יש גיבוי מ %s.\nהאם אתה רוצה לשחזר את זה?",
+		"no":"לא, תודה.",
+		"yes":"בוא נעשה את זה!"
 	}
 }
