--- a/Resources/i18n/ko.json
+++ b/Resources/i18n/ko.json
@@ -11,6 +11,7 @@
 			"close":"Close"
 		},
 		"noSelectedSkin":"No skin selected.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
