--- a/Resources/i18n/pt.json
+++ b/Resources/i18n/pt.json
@@ -11,6 +11,7 @@
 			"close":"Fechar"
 		},
 		"noSelectedSkin":"Nenhuma skin selecionada.",
+		"search":"Search in your skins...",
 		"tips":{
 			"wear":"Protip: To wear a skin, tap and hold its icon!"
 		},
