--- a/Resources/i18n/ru.json
+++ b/Resources/i18n/ru.json
@@ -1,142 +1,142 @@
 {
-	"main":{
-		"skinList":"Список скинов",
-		"addSkin":"Добавить скин",
-		"editSettings":"Изменить Настройки",
-		"skinDetails":{
-			"title":"Информация о скине",
-			"description":"Описание",
-			"creation":"Дата Создания",
-			"wear":"Использовать этот скин",
-			"close":"Закрыть"
-		},
-		"noSelectedSkin":"Не выбран скин.",
-		"search":"Search in your skins...",
-		"tips":{
-			"wear":"Подсказка: Чтобы использовать скин, нажми и удерживай его иконку!"
-		},
-		"skinDelete":{
-			"title":"Подтвердить Удаление",
-			"message":"Вы действительно хотите удалить \"%s\"?",
-			"cancel":"НЕЕЕЕЕЕТ!",
-			"okay":"Точно!"
-		},
-		"progressBar":{
-			"login":"Вхожу...",
-			"upload":"Загружаю скин...",
-			"loginFail":"Не удалось войти",
-			"uploadFail":"Не удалось загрузить",
-			"challengeFail":"Не удалось",
-			"success":"Загрузка завершена!"
-		},
-		"skinUpload":{
-			"confirm":{
-				"title":"Заменить скин?",
-				"message":"Вы действительно хотите заменить свой скин на \"%s\"?",
-				"cancel":"Нет",
-				"okay":"Да"
-			},
-			"error":{
-				"title":"Ошибка отправки",
-				"login":"Не удается войти в minecraft.net. Пожалуйста, проверьте ваш логин и пароль в настройках.",
-				"server":"Не удалось подключиться к minecraft.net. Сайт может быть недоступен. Проверьте на http:\/\/help.mojang.com и повторите попытку позже.",
-				"upload":"Не удаётся загрузить скин на minecraft.net. Повторите попытку позже.",
-				"challenge":"Вы должны ответить на секретный вопрос, чтобы получить доступ к своей учётной записи с этого устройства.\nК сожалению, мы не смогли загрузит его. Пожалуйста, проверьте соединение с интернетом и повторите попытку позже."
-			}
-		}
-	},
-	"settings":{
-		"title":"Настройки",
-		"username":"Имя пользователя",
-		"password":"Пароль",
-		"header":"Данные учётной записи Minecraft.net",
-		"footer":{
-			"migratedAccount":"Если вы пользуетесь учётной записью Mojang, то используйте адрес электронной почты вместо Имени пользователя Minecraft.",
-			"privacy":"Примечание: мы НЕ БУДЕМ хранить или использовать вашу информацию кроме того, чтобы менять скины Minecraft. Информация о вашей учётной записи надёжно хранится в связке ключей iOS."
-		}
-	},
-	"addProcess":{
-		"skinInfo":{
-			"title":"Информация о скине",
-			"shortTitle":"О скине",
-			"name":"Название скина",
-			"nameHint":"Мой Суперский Скин",
-			"description":"Описание",
-			"method":{
-				"title":"Добавить скин...",
-				"search":"С помощью поиска в Интернете",
-				"pseudo":"Из существующего пользователя",
-				"url":"Из URL-адреса",
-				"cancel":"Отмена"
-			}
-		},
-		"urlSelect":{
-			"urlTitle":"Вставьте или введите URL-адрес скина (в формате PNG) сюда:",
-			"pseudoTitle":"Введите имя пользователя Minecraft здесь (с учётом регистра):",
-			"invalidUrl":"Недопустимый URL-адрес (скин должен быть в формате PNG)."
-		},
-		"search":{
-			"select":"Выбрать этот скин",
-			"searchHint":"Искать в MC Network...",
-			"indicator":{
-				"searchResults":"Результаты поиска для: %s",
-				"noResults":"Нет результатов для: %s",
-				"random":"Случайные скины"
-			},
-			"error":{
-				"network":"Не удалось загрузить результаты поиска. Проверьте интернет-соединение и повторите попытку позже."
-			}
-		},
-		"process":{
-			"title":"Обработка...",
-			"progress":{
-				"initial":"Reticulating Splines...",
-				"skin":"Загрузка скина...",
-				"preview":"Загрузка предварительного просмотра скина...",
-				"database":"Регистрация скина в базе данных...",
-				"success":"Скин успешно добавлен! :)",
-				"fail":"Не удалось :("
-			},
-			"error":{
-				"skin":"Ошибка при загрузке скина. Прерываю операцию.",
-				"preview":{
-					"title":"Ошибка сети",
-					"message":"Ошибка при загрузке предварительного просмотра. Скин будет без предварительного просмотра. Все равно продолжить?",
-					"cancel":"Отмена",
-					"ok":"Продолжить"
-				}
-			},
-			"challenge":{
-				"title":"Подтверждение личности",
-				"help":"Вам нужно ответить на этот вопрос потому, что вы пытаетесь получить доступ к учетной записи Mojang из другого местоположения.\n\n Если вы забыли ответ, вы можете попробовать ответить на другой вопрос, закрыв это окно и открыв его снова. (вопрос выбирается случайным образом).\n\nЕсли вы действительно не можете вспомнить пароль, пожалуйста, посетите help.mojang.com для получения инструкций о сбросе ваших вопросов.",
-				"cancel":"Отмена",
-				"continue":"Продолжить",
-				"hint":"Ответ"
-			}
-		},
-		"next":"Дальше"
-	},
-	"credits":{
-		"title":"Авторы",
-		"developer":"Разработчик:",
-		"platform":"Платформа:",
-		"translators":"Переводчики:",
-		"thanks":"Особая благодарность:",
-		"modules":"Модули:"
-	},
-	"buttons":{
-		"edit":"Изменить",
-		"done":"Готово",
-		"close":"Закрыть"
-	},
-	"editSkin":{
-		"short":"Изменить",
-		"title":"Изменить описание скина"
-	},
-	"restoreDatabase":{
-		"title":"Ой-ой-ой...",
-		"message":"По некоторым причинам, мы не смогли открыть файл, содержащий ваши скины. К счастью, есть резервная копия от %s.\nХотите восстановить его?",
-		"no":"Нет, спасибо.",
-		"yes":"Давай!"
-	}
+  "main":{
+    "skinList":"Список скинов",
+    "addSkin":"Добавить скин",
+    "editSettings":"Изменить Настройки",
+    "skinDetails":{
+      "title":"Информация о скине",
+      "description":"Описание",
+      "creation":"Дата Создания",
+      "wear":"Использовать этот скин",
+      "close":"Закрыть"
+    },
+    "noSelectedSkin":"Не выбран скин.",
+    "search":"Поиск по скинам...",
+    "tips":{
+      "wear":"Подсказка: Чтобы использовать скин, нажми и удерживай его иконку!"
+    },
+    "skinDelete":{
+      "title":"Подтвердить Удаление",
+      "message":"Вы действительно хотите удалить \"%s\"?",
+      "cancel":"НЕЕЕЕЕЕТ!",
+      "okay":"Точно!"
+    },
+    "progressBar":{
+      "login":"Вхожу...",
+      "upload":"Загружаю скин...",
+      "loginFail":"Не удалось войти",
+      "uploadFail":"Не удалось загрузить",
+      "challengeFail":"Не удалось",
+      "success":"Загрузка завершена!"
+    },
+    "skinUpload":{
+      "confirm":{
+        "title":"Заменить скин?",
+        "message":"Вы действительно хотите заменить свой скин на \"%s\"?",
+        "cancel":"Нет",
+        "okay":"Да"
+      },
+      "error":{
+        "title":"Ошибка отправки",
+        "login":"Не удается войти в minecraft.net. Пожалуйста, проверьте ваш логин и пароль в настройках.",
+        "server":"Не удалось подключиться к minecraft.net. Сайт может быть недоступен. Проверьте на http:\/\/help.mojang.com и повторите попытку позже.",
+        "upload":"Не удаётся загрузить скин на minecraft.net. Повторите попытку позже.",
+        "challenge":"Вы должны ответить на секретный вопрос, чтобы получить доступ к своей учётной записи с этого устройства.\nК сожалению, мы не смогли загрузит его. Пожалуйста, проверьте соединение с интернетом и повторите попытку позже."
+      }
+    }
+  },
+  "settings":{
+    "title":"Настройки",
+    "username":"Имя пользователя",
+    "password":"Пароль",
+    "header":"Данные учётной записи Minecraft.net",
+    "footer":{
+      "migratedAccount":"Если вы пользуетесь учётной записью Mojang, то используйте адрес электронной почты вместо Имени пользователя Minecraft.",
+      "privacy":"Примечание: мы НЕ БУДЕМ хранить или использовать вашу информацию кроме того, чтобы менять скины Minecraft. Информация о вашей учётной записи надёжно хранится в связке ключей iOS."
+    }
+  },
+  "addProcess":{
+    "skinInfo":{
+      "title":"Информация о скине",
+      "shortTitle":"О скине",
+      "name":"Название скина",
+      "nameHint":"Мой Суперский Скин",
+      "description":"Описание",
+      "method":{
+        "title":"Добавить скин...",
+        "search":"С помощью поиска в Интернете",
+        "pseudo":"Из существующего пользователя",
+        "url":"Из URL-адреса",
+        "cancel":"Отмена"
+      }
+    },
+    "urlSelect":{
+      "urlTitle":"Вставьте или введите URL-адрес скина (в формате PNG) сюда:",
+      "pseudoTitle":"Введите имя пользователя Minecraft здесь (с учётом регистра):",
+      "invalidUrl":"Недопустимый URL-адрес (скин должен быть в формате PNG)."
+    },
+    "search":{
+      "select":"Выбрать этот скин",
+      "searchHint":"Искать в MC Network...",
+      "indicator":{
+        "searchResults":"Результаты поиска для: %s",
+        "noResults":"Нет результатов для: %s",
+        "random":"Случайные скины"
+      },
+      "error":{
+        "network":"Не удалось загрузить результаты поиска. Проверьте интернет-соединение и повторите попытку позже."
+      }
+    },
+    "process":{
+      "title":"Обработка...",
+      "progress":{
+        "initial":"Reticulating Splines...",
+        "skin":"Загрузка скина...",
+        "preview":"Загрузка предварительного просмотра скина...",
+        "database":"Регистрация скина в базе данных...",
+        "success":"Скин успешно добавлен! :)",
+        "fail":"Не удалось :("
+      },
+      "error":{
+        "skin":"Ошибка при загрузке скина. Прерываю операцию.",
+        "preview":{
+          "title":"Ошибка сети",
+          "message":"Ошибка при загрузке предварительного просмотра. Скин будет без предварительного просмотра. Все равно продолжить?",
+          "cancel":"Отмена",
+          "ok":"Продолжить"
+        }
+      },
+      "challenge":{
+        "title":"Подтверждение личности",
+        "help":"Вам нужно ответить на этот вопрос потому, что вы пытаетесь получить доступ к учетной записи Mojang из другого местоположения.\n\n Если вы забыли ответ, вы можете попробовать ответить на другой вопрос, закрыв это окно и открыв его снова. (вопрос выбирается случайным образом).\n\nЕсли вы действительно не можете вспомнить пароль, пожалуйста, посетите help.mojang.com для получения инструкций о сбросе ваших вопросов.",
+        "cancel":"Отмена",
+        "continue":"Продолжить",
+        "hint":"Ответ"
+      }
+    },
+    "next":"Дальше"
+  },
+  "credits":{
+    "title":"Авторы",
+    "developer":"Разработчик:",
+    "platform":"Платформа:",
+    "translators":"Переводчики:",
+    "thanks":"Особая благодарность:",
+    "modules":"Модули:"
+  },
+  "buttons":{
+    "edit":"Изменить",
+    "done":"Готово",
+    "close":"Закрыть"
+  },
+  "editSkin":{
+    "short":"Изменить",
+    "title":"Изменить описание скина"
+  },
+  "restoreDatabase":{
+    "title":"Ой-ой-ой...",
+    "message":"По некоторым причинам, мы не смогли открыть файл, содержащий ваши скины. К счастью, есть резервная копия от %s.\nХотите восстановить его?",
+    "no":"Нет, спасибо.",
+    "yes":"Давай!"
+  }
 }
